Build without compression.

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/SpartanSprint.loader.js";
       var config = {
-        dataUrl: buildUrl + "/SpartanSprint.data.unityweb",
-        frameworkUrl: buildUrl + "/SpartanSprint.framework.js.unityweb",
-        codeUrl: buildUrl + "/SpartanSprint.wasm.unityweb",
+        dataUrl: buildUrl + "/SpartanSprint.data",
+        frameworkUrl: buildUrl + "/SpartanSprint.framework.js",
+        codeUrl: buildUrl + "/SpartanSprint.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "TeamNS(U) Got Game",
         productName: "SpartanSprint",
         productVersion: "0.1",
         showBanner: unityShowBanner,
